--- a/image_classificaion.ipynb
+++ b/image_classificaion.ipynb
@@ -535,19 +535,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '__image_path__'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\SUSHANTH\\Desktop\\DL Projects\\Image-Classification-DL-Project\\image_classificaion.ipynb Cell 25\u001b[0m line \u001b[0;36m<cell line: 15>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/SUSHANTH/Desktop/DL%20Projects/Image-Classification-DL-Project/image_classificaion.ipynb#X34sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mPIL\u001b[39;00m \u001b[39mimport\u001b[39;00m Image\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/SUSHANTH/Desktop/DL%20Projects/Image-Classification-DL-Project/image_classificaion.ipynb#X34sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/SUSHANTH/Desktop/DL%20Projects/Image-Classification-DL-Project/image_classificaion.ipynb#X34sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m im\u001b[39m=\u001b[39mImage\u001b[39m.\u001b[39;49mopen(\u001b[39m\"\u001b[39;49m\u001b[39m__image_path__\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/SUSHANTH/Desktop/DL%20Projects/Image-Classification-DL-Project/image_classificaion.ipynb#X34sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39m# the input image is required to be in the shape of dataset, i.e (32,32,3)\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/SUSHANTH/Desktop/DL%20Projects/Image-Classification-DL-Project/image_classificaion.ipynb#X34sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m im\u001b[39m=\u001b[39mim\u001b[39m.\u001b[39mresize((\u001b[39m32\u001b[39m,\u001b[39m32\u001b[39m))\n",
-      "File \u001b[1;32mc:\\Users\\SUSHANTH\\.conda\\envs\\tensorflow\\lib\\site-packages\\PIL\\Image.py:3068\u001b[0m, in \u001b[0;36mopen\u001b[1;34m(fp, mode, formats)\u001b[0m\n\u001b[0;32m   3065\u001b[0m     filename \u001b[39m=\u001b[39m fp\n\u001b[0;32m   3067\u001b[0m \u001b[39mif\u001b[39;00m filename:\n\u001b[1;32m-> 3068\u001b[0m     fp \u001b[39m=\u001b[39m builtins\u001b[39m.\u001b[39;49mopen(filename, \u001b[39m\"\u001b[39;49m\u001b[39mrb\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m   3069\u001b[0m     exclusive_fp \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[0;32m   3071\u001b[0m \u001b[39mtry\u001b[39;00m:\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '__image_path__'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 81ms/step\n",
+      "0 aeroplane\n"
      ]
     }
    ],
@@ -566,14 +562,16 @@
     "}\n",
     "from PIL import Image\n",
     "import numpy as np\n",
-    "im=Image.open(\"__image_path__\")\n",
+    "im=Image.open(\"images\\\\flight.jpg\")\n",
     "# the input image is required to be in the shape of dataset, i.e (32,32,3)\n",
     " \n",
     "im=im.resize((32,32))\n",
     "im=np.expand_dims(im,axis=0)\n",
     "im=np.array(im)\n",
-    "pred=model.predict_classes([im])[0]\n",
-    "print(pred,results[pred])"
+    "pred_x=model.predict([im])[0]\n",
+    "pred =np.argmax(pred_x,axis=0)\n",
+    "print(pred,results[pred])\n",
+    "#print(pred,results[pred])"
    ]
   }
  ],
